--- a/webDevLab/Cummulative1/Cummulative1/Views/Teacher/TeacherList.cshtml
+++ b/webDevLab/Cummulative1/Cummulative1/Views/Teacher/TeacherList.cshtml
@@ -7,13 +7,20 @@
 
 <h2>Teachers List</h2>
 
+<form action="/Teacher/TeacherList" method="POST">
+    <input type="text" name="SearchKey" autocomplete="" />
+    <input type="submit" value="Search" />
 
-@foreach(var Teach in Model) 
+</form>
+
+@foreach (var Teach in Model)
 {
-   <div>
-       @Teach.TeacherFname @Teach.TeacherLname
+    <div>
+        @Teach.TeacherFname @Teach.TeacherLname
 
-   </div>
+    </div>
 }
+
+
 
 
