--- a/webDevLab/Cummulative1/Cummulative1/Views/Teacher/TeacherShow.cshtml
+++ b/webDevLab/Cummulative1/Cummulative1/Views/Teacher/TeacherShow.cshtml
@@ -1,8 +1,14 @@
 ﻿@model Cummulative1.Models.Teacher
+
 @{
     ViewBag.Title = "TeacherShow";
 }
 
-<h2>Show teacher with provided teacher ID </h2>
+@{
+    var data = ViewBag.SearchKey;
+ }
 
-<p>@Model.TeacherFname @Model.TeacherLname</p>
+<h1>Showing teacher corresponding to the ID provided</h1>
+
+<p><strong><em>@Model.TeacherFname @Model.TeacherLname</em></strong> is the teacher with the ID of @data</p>
+
