parameterized the sql query input for injection attacks

--- a/webDevLab/Cummulative1/Cummulative1/Views/Teacher/TeacherShow.cshtml
+++ b/webDevLab/Cummulative1/Cummulative1/Views/Teacher/TeacherShow.cshtml
@@ -10,5 +10,7 @@
 
 <h1>Showing teacher corresponding to the ID provided</h1>
 
-<p><strong><em>@Model.TeacherFname @Model.TeacherLname</em></strong> is the teacher with the ID of @data</p>
-
+<p><strong><em>@Model.TeacherFname @Model.TeacherLname</em></strong></p>
+<div>With teacher's ID of @Model.TeacherId</div>
+<div>Hired on the @Model.TeacherHireDate</div>
+<div>Having current salary of @Model.TeacherSalary $</div>
