Adding little back and forth navigation links to the MVP

--- a/webDevLab/Cummulative1/Cummulative1/Views/Teacher/TeacherList.cshtml
+++ b/webDevLab/Cummulative1/Cummulative1/Views/Teacher/TeacherList.cshtml
@@ -16,7 +16,8 @@
 @foreach (var Teach in Model)
 {
     <div>
-        @Teach.TeacherFname @Teach.TeacherLname
+        <a href="/Teacher/TeacherShow?id=@Teach.TeacherId">@Teach.TeacherFname @Teach.TeacherLname</a> 
+         
 
     </div>
 }
