--- a/webDevLab/Cummulative1/Cummulative1/Views/Teacher/TeacherShow.cshtml
+++ b/webDevLab/Cummulative1/Cummulative1/Views/Teacher/TeacherShow.cshtml
@@ -8,6 +8,8 @@
     var data = ViewBag.SearchKey;
  }
 
+<a href="/Teacher/TeacherList">Back to teacher's list'</a>
+
 <h1>Showing teacher corresponding to the ID provided</h1>
 
 <p><strong><em>@Model.TeacherFname @Model.TeacherLname</em></strong></p>
