Add teacher functionality is added to my MVP

--- a/webDevLab/Cummulative1/Cummulative1/Content/Site.css
+++ b/webDevLab/Cummulative1/Cummulative1/Content/Site.css
@@ -21,3 +21,10 @@ textarea {
     background-color: #777;
     border-color: #fff
 }
+
+.createTeacher {
+
+    color: red;
+    align-content: center;
+
+}
