--- a/webDevLab/Cummulative1/Cummulative1/Views/Teacher/TeacherList.cshtml
+++ b/webDevLab/Cummulative1/Cummulative1/Views/Teacher/TeacherList.cshtml
@@ -7,6 +7,9 @@
 
 <h2>Teachers List</h2>
 
+<a href="/Teacher/AddTeacher">Create Teacher</a>
+
+
 <form action="/Teacher/TeacherList" method="POST">
     <input type="text" name="SearchKey" autocomplete="" />
     <input type="submit" value="Search" />
