--- a/webDevLab/Cummulative1/Cummulative1/Views/Teacher/TeacherShow.cshtml
+++ b/webDevLab/Cummulative1/Cummulative1/Views/Teacher/TeacherShow.cshtml
@@ -9,7 +9,7 @@
  }
 
 <a href="/Teacher/TeacherList">Back to teacher's list</a>
-<a href="/Teacher/DeleteConfirm?id=@Model.TeacherId">Delete</a>
+<a href="/Teacher/DeleteConfirm?id=@Model.TeacherId" style="float: right">Delete</a>
 
 <h1>Showing teacher corresponding to the ID provided</h1>
 
