Update functionality added to my MVP, just needed to add code quality and the CRUD Operation is completed for the MVP

--- a/webDevLab/Cummulative1/Cummulative1/Views/Teacher/AddTeacher.cshtml
+++ b/webDevLab/Cummulative1/Cummulative1/Views/Teacher/AddTeacher.cshtml
@@ -5,6 +5,7 @@
 }
 
 <h2>Add Teacher</h2>
+<a href="/Teacher/TeacherList">List of Teachers</a>
 
 <form action="/Teacher/CreateTeacher" method="post">
     <div>
