--- a/webDevLab/Cummulative1/Cummulative1/Views/Teacher/DeleteConfirm.cshtml
+++ b/webDevLab/Cummulative1/Cummulative1/Views/Teacher/DeleteConfirm.cshtml
@@ -7,7 +7,7 @@
 }
 
 <h2>Delete Confirm</h2>
-<div>Are you sure to delete @Model.TeacherFname @Model.TeacherLname from the database</div>
+<div>Are you sure to delete @Model.TeacherFname @Model.TeacherLname and her properties from the database</div>
 
 <form action="/Teacher/DelTeacher/@Model.TeacherId" method="GET">
 
