All CRUD functionality added to the MVP, with little code qualities

--- a/webDevLab/Cummulative1/Cummulative1/Views/Teacher/EditTeacher.cshtml
+++ b/webDevLab/Cummulative1/Cummulative1/Views/Teacher/EditTeacher.cshtml
@@ -22,7 +22,7 @@
     </div>
     <div>
         <label for="TeacherHireDate">Hire Date</label>
-        <input type="text" name="TeacherHireDate" value="@Model.TeacherHireDate" id="TeacherHireDate"/>
+        <input type="datetime" name="TeacherHireDate" value="@Model.TeacherHireDate" id="TeacherHireDate"/>
     </div>
 
     <input type="submit" name="name" value="Update Teacher" />
