--- a/webDevLab/Cummulative1/Cummulative1/Views/Teacher/TeacherShow.cshtml
+++ b/webDevLab/Cummulative1/Cummulative1/Views/Teacher/TeacherShow.cshtml
@@ -1,4 +1,5 @@
 ﻿@model Cummulative1.Models.Teacher
+  
 
 @{
     ViewBag.Title = "TeacherShow";
@@ -8,7 +9,7 @@
     var data = ViewBag.SearchKey;
  }
 
-<a href="/Teacher/TeacherList">List of Teachers</a>
+<a href="/Teacher/TeacherList">Back to Teachers</a>
 <a href="/Teacher/DeleteConfirm?id=@Model.TeacherId" style="float: right">Delete</a>
 
 
