--- a/webDevLab/Cummulative1/Cummulative1/Content/Site.css
+++ b/webDevLab/Cummulative1/Cummulative1/Content/Site.css
@@ -22,9 +22,15 @@ textarea {
     border-color: #fff
 }
 
-.createTeacher {
+.CreateTeacher {
 
     color: red;
     align-content: center;
+
+}
+
+.CTButton {
+
+    float: right;
 
 }
