--- a/webDevLab/Cummulative1/Cummulative1/Views/Teacher/AddTeacher.cshtml
+++ b/webDevLab/Cummulative1/Cummulative1/Views/Teacher/AddTeacher.cshtml
@@ -5,16 +5,17 @@
 }
 
 <h2>Add Teacher</h2>
-<a href="/Teacher/TeacherList">List of Teachers</a>
+<a class="LTeacher" href="/Teacher/TeacherList">Back to Teachers</a>
 
 <form action="/Teacher/CreateTeacher" method="post">
     <div>
         <label for="TeacherFname">Teacher First Name</label>
         <input type="text" name="TeacherFname" value="" id="TeacherFname" />
     </div>
-    <div></div>
-    <label for="TeacherLname">Teacher Last Name</label>
-    <input type="text" name="TeacherLname" value="" id="TeacherLname" />
+    <div>
+        <label for="TeacherLname">Teacher Last Name</label>
+        <input type="text" name="TeacherLname" value="" id="TeacherLname" />
+    </div>
     <div>
         <label for="TeacherSalary">Teacher Salary</label>
         <input type="text" name="TeacherSalary" value="" id="TeacherSalary" />
@@ -23,7 +24,6 @@
         <label for="TeacherHireDate">Teacher hire date</label>
         <input type="date" name="TeacherHireDate" value="" id="TeacherHireDate" />
     </div>
-
     <div>
         <input type="submit" name="name" value="Create Teacher" />
     </div>
