--- a/webDevLab/Cummulative1/Cummulative1/Views/Teacher/TeacherList.cshtml
+++ b/webDevLab/Cummulative1/Cummulative1/Views/Teacher/TeacherList.cshtml
@@ -7,8 +7,6 @@
 
 <h2>Teachers List</h2>
 
-<a href="/Teacher/AddTeacher">Create Teacher</a>
-
 
 <form action="/Teacher/TeacherList" method="POST">
     <input type="text" name="SearchKey" autocomplete="" />
@@ -21,9 +19,12 @@
     <div>
         <a href="/Teacher/TeacherShow?id=@Teach.TeacherId">@Teach.TeacherFname @Teach.TeacherLname</a> 
          
-
     </div>
 }
+<form action="/Teacher/AddTeacher" method="get">
+    <button class="CTButton">Create Teacher</button>
+</form>
+
 
 
 
