--- a/MyPassionProject/MyPassionProject/Views/roadsConn/List.cshtml
+++ b/MyPassionProject/MyPassionProject/Views/roadsConn/List.cshtml
@@ -4,13 +4,24 @@
     ViewBag.Title = "List";
 }
 
-<h1>List of all Roads</h1>
-@foreach (var road in Model) { 
+<a class="anchorNav" href="/roadsConn/New">Add New Road</a>
 
+<h3>List of roads</h3>
+
+@foreach (var road in Model)
+{
+
+    <div>
+
+        <a href="Details/@road.roadId">@road.streetName</a>
+
+    </div>
+    <div>Length: @road.roadLength</div>
+    <div>STATUS: @road.roadStatus</div>
     
-    <h2>@road.streetName, which is @road.roadLength km in length</h2>
-    <h3>LGA: @road.localGovnName</h3>
-    <p>Poster's Name: @road.posterFirstName @road.posterLastName</p>
-
+        <br />
+    
 }
+
+
 
