--- a/capstone/NaijaCA-Forum/NaijaCA-Forum/Views/Home/Index.cshtml
+++ b/capstone/NaijaCA-Forum/NaijaCA-Forum/Views/Home/Index.cshtml
@@ -3,29 +3,81 @@
 }
 
 <div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="https://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
+    <h1 id="logo">
+        <img src="../Images/ForumLogo.png" alt="Alternate Text" />
+    </h1>
+    <br />
+    <br />
+    <br />
+    <br />
+    <p class="lead">Welcome to the Newcomer Services Forum!</p>
+    <p class="lead">This forum is designed to provide support, guidance, and resources for newcomers to Canada from Nigeria to help them smoothly transition and adapt to their new environment. Whether you have recently moved to the country, city, or community, or you're assisting someone in their journey, this forum is here to assist you.</p>
+    <p class="lead">Become a <a href="https://localhost:44327/member/new">member</a> and connect with fellow newcomers and locals to build social networks, share experiences, and find support. Discuss community events, volunteer opportunities, and initiatives that foster inclusivity and diversity.</p>
+    <p class="lead">Below are some key topics and areas of discussion you can explore in this forum:</p>
+    <br />
+    <br />
+    <br />
+    <p><a href="https://localhost:44327/Home/About" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
 </div>
+<br />
+<br />
+<br />
+<br />
 
 <div class="row">
     <div class="col-md-4">
-        <h2>Getting started</h2>
+        <h2>Immigration and Visa Support</h2>
         <p>
-            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
+            Information and experiences related to immigration processes, visa applications, and residency permits. Challenges, requirements, and best practices for a successful immigration journey are discussed here.
         </p>
         <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
     </div>
     <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
+        <h2>Settlement and Integration</h2>
+        <p>Discussions on settling into a new community, including finding housing, understanding local laws and regulations, accessing healthcare and education services, and learning about cultural norms and traditions.</p>
         <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
     </div>
     <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
+        <h2>Language Learning and Communication</h2>
+        <p>Language learning resources, tips, and strategies. Importance of language skills in integrating into a new environment and overcoming language barriers are discussed here.</p>
+        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
+    </div>
+    <div class="col-md-4">
+        <h2>Employment and Career Guidance</h2>
+        <p>Explore job search techniques, resume writing, interview preparation, and networking opportunities. Discuss career development strategies, skills recognition, and professional licensing.</p>
+        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
+    </div>
+    <div class="col-md-4">
+        <h2>Community Connections and Social Support</h2>
+        <p>Connect with fellow newcomers and locals to build social networks, share experiences, and find support. Discuss community events, volunteer opportunities, and initiatives that foster inclusivity and diversity.</p>
+        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
+    </div>
+    <div class="col-md-4">
+        <h2>Access to Resources</h2>
+        <p>Share information on organizations, programs, and services that offer support to newcomers. Discuss government assistance programs, language classes, settlement agencies, and other resources that can aid in the integration process.</p>
+        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
+    </div>
+    <div class="col-md-4">
+        <h2>Cultural Exchange</h2>
+        <p>Embrace and celebrate cultural diversity. Share your traditions, customs, festivals, and food recipes. Engage in respectful discussions to promote cultural understanding and inclusiveness.</p>
         <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
     </div>
 </div>
+<br />
+<br />
+<br />
+<br />
+<br />
+
+<div class="jumbotron">
+
+    <p class="lead"><a href="https://localhost:44327/member/becomeamember">How to become a member?</a></p>
+    <p class="lead">Remember to be respectful, considerate, and supportive of one another in all discussions. Feel free to ask questions, seek advice, and contribute your knowledge and experiences to help newcomers thrive in their new environment.</p>
+    <p class="lead">We hope you find this forum helpful and enjoy your interactions with the community. Welcome aboard!.</p>
+    <p><a href="https://localhost:44327/member/new" class="btn btn-primary btn-lg">Become a member for free &raquo;</a></p>
+</div>
+
+<br />
+<br />
+<br />
+<br />
