--- a/capstone/NaijaCA-Forum/NaijaCA-Forum/Views/Home/Contact.cshtml
+++ b/capstone/NaijaCA-Forum/NaijaCA-Forum/Views/Home/Contact.cshtml
@@ -1,17 +1,16 @@
 ﻿@{
     ViewBag.Title = "Contact";
 }
-<h2>@ViewBag.Title.</h2>
-<h3>@ViewBag.Message</h3>
+<h2>Contact:</h2>
 
 <address>
-    One Microsoft Way<br />
-    Redmond, WA 98052-6399<br />
-    <abbr title="Phone">P:</abbr>
-    425.555.0100
+    7685 Black Walnut Trail<br />
+    Mississauga, ON L5N 8A6<br />
+    <abbr title="Phone">Phone:</abbr>
+    6475408374
 </address>
 
 <address>
-    <strong>Support:</strong>   <a href="mailto:Support@example.com">Support@example.com</a><br />
-    <strong>Marketing:</strong> <a href="mailto:Marketing@example.com">Marketing@example.com</a>
+    <strong>Support:</strong>   <a href="mailto:lasisilukmon@gmail.com">lasisilukmon@gmail.com</a><br />
+    <strong>Marketing:</strong> <a href="mailto:Marketing@example.com">lasisilukmon@gmail.com</a>
 </address>
