--- a/capstone/NaijaCA-Forum/NaijaCA-Forum/Views/Shared/_Layout.cshtml
+++ b/capstone/NaijaCA-Forum/NaijaCA-Forum/Views/Shared/_Layout.cshtml
@@ -1,11 +1,13 @@
 ﻿<!DOCTYPE html>
-<html>
+<html id="project-content">
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>@ViewBag.Title - My ASP.NET Application</title>
+    <title>@ViewBag.Title - NaijaCA Forum</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
+
+<script type="text/javascript" src="JavaScripts/JavaScript.js"></script>
 
 </head>
 <body>
@@ -17,23 +19,30 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("Application name", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                @Html.ActionLink("NaijaCA Forum", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Home", "Index", "Home")</li>
+
+                    <li><a href="/member/list">Members</a></li>
+                    <li><a href="/thread/list">Threads</a></li>
+                    <li><a href="/member/resources">Resources</a></li>
+                    
                     <li>@Html.ActionLink("About", "About", "Home")</li>
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
+
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
         </div>
     </div>
     <div class="container body-content">
+        
         @RenderBody()
+        
         <hr />
         <footer>
-            <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
+            <p>&copy; @DateTime.Now.Year - Lukmon Lasisi</p>
         </footer>
     </div>
 
